syntax = "proto3";

package post;

import "common/common.proto";
import "comment/comment.proto";
import "google/protobuf/empty.proto";


service PostService{
    rpc GetAllPosts (GetPostsRequest) returns (GetPostsResponse) {};
    rpc HealthCheck (google.protobuf.Empty) returns (common.EmptyResponse) {}
}

message GetPostsRequest{
string authorId = 1;
int32 limit = 2;
int32 offset = 3;
optional string sort = 4;
}

message PostWithComments{
    string id = 1;
    string authorId = 2;
    string title = 3;
    string content = 4;
    string createdAt = 5;
    string updatedAt = 6;
    repeated comment.Comment comments = 7;
}

message GetPostsData{
    common.PageOptions page = 1;
    int32 total = 2;
    repeated PostWithComments data = 3;
}

message GetPostsResponse{
int32 status = 1;
GetPostsData data = 2;
}
